--- a/nomad/client.service
+++ b/nomad/client.service
@@ -3,7 +3,7 @@ Description=Nomad client
 Wants=network-online.target
 After=network-online.target
 [Service]
-ExecStart= /bin/sh -c "/usr/local/bin/nomad agent -config /home/ubuntu/keel/client/nomad/client.hcl"
+ExecStart= /bin/sh -c "/usr/local/bin/nomad agent -config /root/keel/nomad/client.hcl"
 Restart=always
 RestartSec=10
 [Install]
