--- a/nomad/server.service
+++ b/nomad/server.service
@@ -3,7 +3,7 @@ Description=Nomad server
 Wants=network-online.target
 After=network-online.target
 [Service]
-ExecStart= /bin/sh -c "/usr/local/bin/nomad agent -config /home/ubuntu/keel/server/nomad/server.hcl"
+ExecStart= /bin/sh -c "/usr/local/bin/nomad agent -config /root/keel/nomad/server.hcl"
 Restart=always
 RestartSec=10
 [Install]
