--- a/terraform/dc1/config/worker/consul.service
+++ b/terraform/dc1/config/worker/consul.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=Nomad server
+Description=Consul client
 Wants=network-online.target
 After=network-online.target
 [Service]
-ExecStart= /bin/sh -c "/usr/local/bin/nomad agent -config /root/keel/nomad/server.hcl"
+ExecStart= /bin/sh -c "/usr/local/bin/consul agent -config-file /root/keel/consul/client.hcl -retry_join ${IP}"
 Restart=always
 RestartSec=10
 [Install]
