--- a/terraform/dc1/config/consul.service
+++ b/terraform/dc1/config/consul.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=Nomad server
+Description=consul
 Wants=network-online.target
 After=network-online.target
 [Service]
-ExecStart= /bin/sh -c "/usr/local/bin/nomad agent -config ${config_path}"
+ExecStart= /bin/sh -c "/usr/local/bin/consul agent -config-file ${config_path}"
 Restart=always
 RestartSec=10
 [Install]
