--- a/terraform/bk-det1/config/consul.service
+++ b/terraform/bk-det1/config/consul.service
@@ -7,8 +7,8 @@ ConditionFileNotEmpty=/etc/consul.d/consul.hcl
 
 [Service]
 Type=notify
-User=ubuntu
-Group=ubuntu
+User=root
+Group=root
 ExecStart=/usr/local/bin/consul agent -config-dir=/etc/consul.d/
 ExecReload=/bin/kill --signal HUP $MAINPID
 KillMode=process
