--- a/terraform/bk-det1/config/nomad.service
+++ b/terraform/bk-det1/config/nomad.service
@@ -1,5 +1,5 @@
 [Unit]
-Description="HashiCorp Nomad - A simple orchestrator"
+Description=nomad
 Documentation=https://www.nomadproject.io/
 Requires=network-online.target
 After=network-online.target
@@ -9,7 +9,7 @@ ConditionFileNotEmpty=/etc/consul.d/consul.hcl
 Type=notify
 User=root
 Group=root
-ExecStart=/usr/local/bin/nomad agent -config-dir=/etc/nomad.d/
+ExecStart= /bin/sh -c "/usr/local/bin/nomad agent -config-dir /etc/nomad.d"
 ExecReload=/bin/kill --signal HUP $MAINPID
 KillMode=process
 KillSignal=SIGTERM
