--- a/terraform/bk-det1/config/nomad.service
+++ b/terraform/bk-det1/config/nomad.service
@@ -3,7 +3,7 @@ Description=nomad
 Wants=network-online.target
 After=network-online.target
 [Service]
-ExecStart= /bin/sh -c "/usr/local/bin/nomad agent -config-dir /etc/nomad.d/"
+ExecStart= /bin/sh -c "/usr/local/bin/nomad agent -config /etc/nomad.d/nomad.hcl"
 Restart=always
 RestartSec=10
 [Install]
