--- a/terraform/bk-det1/config/consul.service
+++ b/terraform/bk-det1/config/consul.service
@@ -3,7 +3,7 @@ Description=consul
 Wants=network-online.target
 After=network-online.target
 [Service]
-ExecStart= /bin/sh -c "/usr/local/bin/consul agent -config /etc/consul.d/consul.hcl"
+ExecStart= /bin/sh -c "/usr/local/bin/consul agent -config-file /etc/consul.d/consul.hcl"
 Restart=always
 RestartSec=10
 [Install]
