--- a/kube/pier_deployment.yml
+++ b/kube/pier_deployment.yml
@@ -29,7 +29,8 @@ spec:
     spec:
       containers:
         - name: pier
-          image: registry.digitalocean.com/bken/pier:d11c75dfb05468d3aaecb594facf7eaf994c9b1f
+          imagePullPolicy: "Always"
+          image: registry.digitalocean.com/bken/pier:latest
           envFrom:
             - secretRef:
                 name: pier
