--- a/kube/ingress.yml
+++ b/kube/ingress.yml
@@ -4,6 +4,8 @@ metadata:
   name: bken-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/cors-allow-methods: GET, PUT, PATCH, POST, OPTIONS, DELETE
 spec:
   rules:
     - host: "bken.io"
