--- a/kube/pier_deployment.yml
+++ b/kube/pier_deployment.yml
@@ -30,7 +30,7 @@ spec:
       containers:
         - name: pier
           imagePullPolicy: "Always"
-          image: registry.digitalocean.com/bken/pier:464c3f3f8dc3c7e56c63e7fedab5037489c1b036
+          image: registry.digitalocean.com/bken/pier:latest
           envFrom:
             - secretRef:
                 name: pier
